公众号二维码

--- a/docs/views/探索JavaScript/2021/原型、原型链.md
+++ b/docs/views/探索JavaScript/2021/原型、原型链.md
@@ -1,5 +1,5 @@
 ---
-title: Promise - 异步问题同步化解决方案
+title: 原型、原型链
 date: 2021-12-30 05:50
 tags: 
  - 原型
@@ -8,14 +8,14 @@ categories:
  - 探索JavaScript
 ---
 
-# 原型定义
+## 原型定义
 原型是function对象的一个属性，它定义了构造函数制造出的对象的公共祖先。通过该构造函数产生的对象，可以继承该原型的属性和方法。原型也是对象。
 
 对象如何查看原型 -> 隐式属性 `__proto__`
 
 对象如何查看对象的构造函数 -> `constructor`
 
-# 从属关系
+## 从属关系
 `prototype` -> 函数的一个属性：普通对象 {}
 
 `__proto__` -> 对象Object的一个属性：普通对象 {}
@@ -36,7 +36,7 @@ console.log(Person.prototype.__proto__ === Object.prototype); // true
 
 console.log(Object.prototype.__proto__); // null
 ```
-# 利用原型特点和概念，可以提取共有属性
+## 利用原型特点和概念，可以提取共有属性
 ```
 // 共有属性
 Car.prototype.lang = 4900;
@@ -52,7 +52,7 @@ const car1 = new Car('red', '张三');
 console.log(car, car1);
 console.log(car.lang, car1.lang); // 4900 4900
 ```
-# 原型链
+## 原型链
 原型链的链接点是 `__proto__`
 ```
 Grand.prototype.lastName = 'Liu';
@@ -75,7 +75,7 @@ console.log(son.hobbit); // smoke
 console.log(son.name); // xuming
 console.log(son.lastName); // Liu
 ```
-# Object.create(原型);
+## Object.create(原型);
 ```
 const obj = {
   name: 'liu'
@@ -90,7 +90,7 @@ const person = Object.create(Person.prototype); // person的原型是Person.prot
 
 const obj2 = Object.create(null); //创建无原型对象 没有toString()
 ```
-# toString()
+## toString()
 undefined.toString() // 报错, 是原始值，没有原型所以没有toString()
 
 null.toString() // 报错, 是原始值，没有原型所以没有toString()
